polishing text, referencing figures

--- a/jupyter.Rmd
+++ b/jupyter.Rmd
@@ -100,7 +100,7 @@ process.
 To run the a code cell independently, the cell needs to first be activated. This
 is done by clicking on it with the cursor. Jupyter will indicate a cell has been
 activated by highlighting it with a blue rectangle to its left. After the cell
-has been activated, the cell can be run by either pressing the **Run** (▶) 
+has been activated (Figure \@ref(fig:activate-and-run-button)), the cell can be run by either pressing the **Run** (▶) 
 button in the Jupyter notebook tab menu, or by using a keyboard shortcut of 
 `Shift + Enter`.
 
@@ -113,19 +113,18 @@ To execute all of the code cells in an entire notebook, you have three options:
 
 1. Select **Run** >> **Run All Cells** from the menu.
 
-2. Select **Kernel** >> **Restart Kernel and Run All Cells...** from the menu.
+2. Select **Kernel** >> **Restart Kernel and Run All Cells...** from the menu (Figure \@ref(fig:restart-kernel-run-all)).
 
 3. Click the (▶▶) button in the tool bar.
 
 All of these commands result in all of the code cells in a notebook being run.
-However, there is a slight difference between them.
-In particular, only options 2 and 3 above will restart the R session before running all of the cells;
-option 1 will not restart the session. Restarting 
-the R session means that all previous objects 
-that were created from running cells before this command was run will be 
-deleted. In other words, restarting the session and then running all cells (options 2 or 3)
-emulates how your notebook code would run if you 
-completely restarted Jupyter before executing your entire notebook.
+However, there is a slight difference between them.  In particular, only
+options 2 and 3 above will restart the R session before running all of the
+cells; option 1 will not restart the session. Restarting the R session means
+that all previous objects that were created from running cells before this
+command was run will be deleted. In other words, restarting the session and
+then running all cells (options 2 or 3) emulates how your notebook code would
+run if you completely restarted Jupyter before executing your entire notebook.
 
 ```{r restart-kernel-run-all, echo = FALSE, fig.cap = "Restarting the R session can be accomplished by clicking Restart Kernel and Run All Cells...", fig.retina = 2, out.width="100%"}
 image_read("img/restart-kernel-run-all.png") |> 
@@ -147,12 +146,12 @@ of time, your notebook is very slow and unresponsive, or your kernel loses its
 connection. If this happens, try the following steps:
 
 1. At the top of your screen, click **Kernel**, then **Interrupt Kernel**.
-2. If that doesn't help, click **Kernel**, then **Restart Kernel**.... If you do this, you will have to run your code cells from the start of your notebook up until where you paused your work.
-3. If that doesn't help, restart your server. First, save your work by clicking **File** at the top left of your screen, then **Save Notebook**. Next, from the **File** menu click **Hub Control Panel**. Choose **Stop My Server** to shut it down, then the **My Server** button to start it back up. Then, navigate back to the notebook you were working on.
+2. If that doesn't help, click **Kernel**, then **Restart Kernel...** If you do this, you will have to run your code cells from the start of your notebook up until where you paused your work.
+3. If that still doesn't help, restart Jupyter. First, save your work by clicking **File** at the top left of your screen, then **Save Notebook**. Next, if you are accessing Jupyter using a JupyterHub server, from the **File** menu click **Hub Control Panel**. Choose **Stop My Server** to shut it down, then the **My Server** button to start it back up. If you are running Jupyter on your own computer, from the **File** menu click **Shut Down**, then start Jupyter again. Finally, navigate back to the notebook you were working on.
 
 ### Creating new code cells
 
-To create a new code cell in Jupyter, click the `+` button in the Jupyter 
+To create a new code cell in Jupyter (Figure \@ref(fig:create-new-code-cell)), click the `+` button in the Jupyter 
 notebook tab menu. By default, all new cells in Jupyter start out as code cells, 
 so after this, all you have to do is write R code within the new cell you just 
 created!
@@ -166,27 +165,21 @@ image_read("img/create-new-code-cell.png") |>
 
 Text cells inside a Jupyter notebook are called Markdown cells. Markdown cells 
 are rich formatted text cells, which means you can **bold** and *italicize* 
-text, create subject headers, format bullet and numbered lists. These cells are 
-given the name "Markdown" because they use the Markdown markup language to 
-specify the rich text formatting. A markup language is a human readable computer 
-language for specifying how plain text should be richly formatted by the program
-that renders it.
-
+text, create subject headers, create bullet and numbered lists, and more. These cells are 
+given the name "Markdown" because they use *Markdown language* to specify the rich text formatting.
 You do not need to learn Markdown to write text in the Markdown cells in 
-Jupyter, plain text will work just fine. However, you might want to learn a bit 
-about the Markdown markup language eventually. Teaching the markdown formatting 
-language is beyond the scope of this book. However, If you are keen to learn 
-more, a good place to start is this cheatsheet by Commonmark: 
-[https://commonmark.org/help/](https://commonmark.org/help/), 
-as well as their tutorial: 
-[https://commonmark.org/help/tutorial/](https://commonmark.org/help/tutorial/).
+Jupyter; plain text will work just fine. However, you might want to learn a bit 
+about Markdown eventually to enable you to create nicely formatted analyses. 
+See the additional resources at the end of this chapter to find out
+where you can start learning Markdown.
 
 ### Editing Markdown cells
 
-To edit a Markdown cell in Jupyter, you need to double click on any Markdown 
-cell and the unformatted (we call this unrendered) version of the text will be
-shown. You can then use your keyboard to edit the text. To view the formatted
-(we call this rendered) text, click the **Run** (▶) button in the Jupyter 
+To edit a Markdown cell in Jupyter, you need to double click on the cell. Once
+you do this,  the unformatted (or *unrendered*) version of the text will be
+shown (Figure \@ref(fig:markdown-cell-not-run)). You 
+can then use your keyboard to edit the text. To view the formatted
+(or *rendered*) text (Figure \@ref(fig:markdown-cell-run)), click the **Run** (▶) button in the Jupyter 
 notebook tab menu, or use the `Shift + Enter` keyboard shortcut.
 
 ```{r markdown-cell-not-run, echo = FALSE, fig.cap = "A Markdown cell in Jupyter that has not yet been rendered and can be edited.", fig.retina = 2, out.width="100%"}
@@ -205,9 +198,8 @@ To create a new Markdown cell in Jupyter, click the `+` button in the Jupyter
 notebook tab menu. By default, all new cells in Jupyter start as code cells, so 
 the cell format needs to be changed to be recognized and rendered as a Markdown 
 cell. To do this, click on the cell with your cursor to 
-ensure it is activated, and then click on the drop-down box next to the 
-**Restart the kernel, then re-run the whole notebook** button (▶▶) in the 
-Jupyter notebook tab menu and changing it from "**Code**" to "**Markdown**".
+ensure it is activated.  Then click on the drop-down box on the toolbar that says "Code" (it
+is next to the ▶▶ button), and change it from "**Code**" to "**Markdown**" (Figure \@ref(fig:convert-to-markdown-cell)).
 
 ```{r convert-to-markdown-cell, echo = FALSE, fig.cap = "New cells are by default code cells. To create Markdown cells, the cell format must be changed.", fig.retina = 2, out.width="100%"}
 image_read("img/convert-to-markdown-cell.png") |> 
@@ -220,7 +212,7 @@ As with any file you work on, it is critical to save your work often so you
 don't lose your progress! Jupyter has an autosave feature, where open files are 
 saved periodically. The default for this is every two minutes. You can also 
 manually save a Jupyter notebook by selecting **Save Notebook** from the 
-File menu, by clicking the dick icon on the tab menu of the Jupyter notebook,
+**File** menu, by clicking the disk icon on the toolbar,
 or by using a keyboard shortcut (`Control + S` for Windows, or `Command + S` for
 Mac OS). 
 
@@ -422,3 +414,12 @@ underscore (`_`).
 
 ## Additional resources
 - The [JupyterLab Documentation](https://jupyterlab.readthedocs.io/en/latest/)
+
+Teaching the markdown formatting 
+language is beyond the scope of this book. However, If you are keen to learn 
+more, a good place to start is this cheatsheet by Commonmark: 
+[https://commonmark.org/help/](https://commonmark.org/help/), 
+as well as their tutorial: 
+[https://commonmark.org/help/tutorial/](https://commonmark.org/help/tutorial/).
+
+
