done polishing jupyter chapter

--- a/jupyter.Rmd
+++ b/jupyter.Rmd
@@ -101,7 +101,7 @@ To run the a code cell independently, the cell needs to first be activated. This
 is done by clicking on it with the cursor. Jupyter will indicate a cell has been
 activated by highlighting it with a blue rectangle to its left. After the cell
 has been activated (Figure \@ref(fig:activate-and-run-button)), the cell can be run by either pressing the **Run** (▶) 
-button in the Jupyter notebook tab menu, or by using a keyboard shortcut of 
+button in the toolbar, or by using a keyboard shortcut of 
 `Shift + Enter`.
 
 ```{r activate-and-run-button, echo = FALSE, fig.cap = "An activated cell that is ready to be be run. The red arrow points to blue rectangle to the cell's left. The blue rectangle indicates that it is ready to be run. This can be done by clicking the run button (circled in red).", fig.retina = 2, out.width="100%"}
@@ -151,8 +151,8 @@ connection. If this happens, try the following steps:
 
 ### Creating new code cells
 
-To create a new code cell in Jupyter (Figure \@ref(fig:create-new-code-cell)), click the `+` button in the Jupyter 
-notebook tab menu. By default, all new cells in Jupyter start out as code cells, 
+To create a new code cell in Jupyter (Figure \@ref(fig:create-new-code-cell)), click the `+` button in the 
+toolbar. By default, all new cells in Jupyter start out as code cells, 
 so after this, all you have to do is write R code within the new cell you just 
 created!
 
@@ -179,8 +179,8 @@ To edit a Markdown cell in Jupyter, you need to double click on the cell. Once
 you do this,  the unformatted (or *unrendered*) version of the text will be
 shown (Figure \@ref(fig:markdown-cell-not-run)). You 
 can then use your keyboard to edit the text. To view the formatted
-(or *rendered*) text (Figure \@ref(fig:markdown-cell-run)), click the **Run** (▶) button in the Jupyter 
-notebook tab menu, or use the `Shift + Enter` keyboard shortcut.
+(or *rendered*) text (Figure \@ref(fig:markdown-cell-run)), click the **Run** (▶) button in the toolbar, 
+or use the `Shift + Enter` keyboard shortcut.
 
 ```{r markdown-cell-not-run, echo = FALSE, fig.cap = "A Markdown cell in Jupyter that has not yet been rendered and can be edited.", fig.retina = 2, out.width="100%"}
 image_read("img/markdown-cell-not-run.png") |> 
@@ -194,8 +194,8 @@ image_read("img/markdown-cell-run.png") |>
 
 ### Creating new Markdown cells
 
-To create a new Markdown cell in Jupyter, click the `+` button in the Jupyter 
-notebook tab menu. By default, all new cells in Jupyter start as code cells, so 
+To create a new Markdown cell in Jupyter, click the `+` button in the toolbar. 
+By default, all new cells in Jupyter start as code cells, so 
 the cell format needs to be changed to be recognized and rendered as a Markdown 
 cell. To do this, click on the cell with your cursor to 
 ensure it is activated.  Then click on the drop-down box on the toolbar that says "Code" (it
@@ -221,20 +221,19 @@ Mac OS).
 ### Best practices for executing code cells
 
 As you might know (or at least imagine) by now, Jupyter notebooks are great for
-interactively editing, writing and running R code - this is what they were 
-designed for. Consequently, Jupyter notebooks are flexible in regards to code 
+interactively editing, writing and running R code; this is what they were 
+designed for! Consequently, Jupyter notebooks are flexible in regards to code 
 cell execution order. This flexibility means that code cells can be run in any 
-arbitrary order using the **Run** (▶) button. This flexibility has a downside 
-since it can lead to Jupyter notebooks whose code cannot be executed in a linear 
-order (from top to bottom of the notebook). A non-linear notebook is problematic 
+arbitrary order using the **Run** (▶) button. But this flexibility has a downside: 
+it can lead to Jupyter notebooks whose code cannot be executed in a linear 
+order (from top to bottom of the notebook). A nonlinear notebook is problematic 
 because a linear order is the conventional way code documents are run, and 
 others will have this expectation when running your notebook. Finally, if the 
 code is used in some automated process, it will need to run in a linear order, 
 from top to bottom of the notebook.
 
-Even with the best intentions, the flexibility of a Jupyter notebook can 
-sometimes cause us to misstep and write non-linear code. This misstep is most 
-often due to relying solely on using the ▶ button to execute cells. For example, 
+The most common way to inadvertently create a nonlinear notebook is to rely solely 
+on using the ▶ button to execute cells. For example, 
 suppose you write some R code that creates an R object, say a variable named 
 `y`. When you execute that cell and create `y`, it will continue 
 to exist until it is deliberately deleted with R code, or when the Jupyter 
@@ -254,7 +253,7 @@ image_read("img/out-of-order-1.png") |>
   image_crop("3632x800")
 ```
 
-```{r out-of-order-2, echo = FALSE, fig.cap = "Code that was written out of order, and was executed using the run button in a non-linear error without error. The order of execution can be traced by following the numbers to the left of the code cells; their order indicates the order in which the cells were executed.", fig.retina = 2, out.width="100%"}
+```{r out-of-order-2, echo = FALSE, fig.cap = "Code that was written out of order, and was executed using the run button in a nonlinear error without error. The order of execution can be traced by following the numbers to the left of the code cells; their order indicates the order in which the cells were executed.", fig.retina = 2, out.width="100%"}
 image_read("img/out-of-order-2.png") |> 
   image_crop("3632x800")
 ```
@@ -264,37 +263,35 @@ image_read("img/out-of-order-3.png") |>
   image_crop("3632x800")
 ```
 
-Another thing that the flexibility of a Jupyter notebooks allows you to do is 
-create objects through running a cell, which later gets deleted. In such a 
-scenario, that object only exists for that one particular R session and would 
-not exist again if the notebook session was restarted and the notebook run 
-again. If that object was referenced in another cell in that notebook, an error 
-would likely occur when the Jupyter notebook was run again in a new session.
+You can also accidentally create a nonfunctioning notebook by
+creating an object in a cell that later gets deleted. In such a 
+scenario, that object only exists for that one particular R session and will 
+not exist once the notebook is restarted and run again. If that 
+object was referenced in another cell in that notebook, an error 
+would occur when the notebook was run again in a new session.
 
 These events may not negatively affect the current R session when 
-the code was being written, but as you might now see, they will likely lead to 
-errors when that notebook is run in a future session. Regularly, and 
-intentionally executing the entire notebook in a fresh R session will help guard 
-against this by letting a user know that some aspect of the code does not allow 
-the notebook to be run linearly. Knowing this sooner than later will allow the 
-user to fix the issue quickly and easily, ideally within that session. 
+the code is being written; but as you might now see, they will likely lead to 
+errors when that notebook is run in a future session. Regularly executing 
+the entire notebook in a fresh R session will help guard 
+against this. If you restart your session and new errors seem to pop up when
+you run all of your cells in linear order, you can at least be aware that there
+is an issue. Knowing this sooner rather than later will allow you to 
+fix the issue and ensure your notebook can be run linearly from start to finish.
 
-We recommend as a best practice to run the entire notebook in a fresh R session,
-at least 2-3 times within any work session on a Jupyter notebook. Note that a 
-key thing about our best practice recommendation here is not just
-running all the cells, but also doing this in a fresh R session. To do this in 
-Jupyter, we recommend using either the **Kernel** >> 
-**Restart Kernel and Run All Cells...** command from the Jupyter menu or the ▶▶ 
-button in the Jupyter notebook tab menu. The **Run** >> **Run All Cells** 
-command from the Jupyter menu will run all the cells, but it will not do this 
-a fresh R session, and so it is not sufficient to guard against these errors.
+We recommend as a best practice to run the entire notebook in a fresh R session
+at least 2-3 times within any period of work. Note that,
+critically, you *must do this in a fresh R session* by restarting your kernel.
+We recommend using either the **Kernel** >> 
+**Restart Kernel and Run All Cells...** command from the menu or the ▶▶ 
+button in the toolbar. Note that the **Run** >> **Run All Cells** 
+menu item will not restart the kernel, and so it is not sufficient 
+to guard against these errors.
 
 ### Best practices for including R packages in notebooks
 
-
-
 Most data analyses these days depend on functions from external R packages that 
-are not built-in to R. One example is the `tidyverse` metapackage that we 
+are not built into R. One example is the `tidyverse` metapackage that we 
 heavily rely on in this book. This package provides us access to functions like 
 `read_csv` for reading data, `select` for subsetting columns, and `ggplot` for 
 creating high-quality graphics. 
@@ -313,10 +310,10 @@ analysis can run without error can take a great deal of time to uncover.
 
 Therefore, we recommend you load all R packages in a code cell near the top of 
 the Jupyter notebook. Loading all your packages at the start ensures that all 
-packages are loaded before their functions are called (assuming the notebook is 
-run in a linear order from top to bottom, as recommended above) and makes it 
+packages are loaded before their functions are called, assuming the notebook is 
+run in a linear order from top to bottom as recommended above. It also makes it 
 easy for others viewing or running the notebook to see what external R packages 
-were used in the analysis, and hence, what packages they should install on 
+are used in the analysis, and hence, what packages they should install on 
 their computer to run the analysis successfully.
 
 ### Summary of best practices for running a notebook
@@ -324,9 +321,9 @@ their computer to run the analysis successfully.
 1. Write code so that it can be executed in a linear order.
 
 2. As you write code in a Jupyter notebook, run the notebook in a linear order 
-and in it's entirety often (2-3 times every work session) via the **Kernel** >> 
+and in its entirety often (2-3 times every work session) via the **Kernel** >> 
 **Restart Kernel and Run All Cells...** command from the Jupyter menu or the ▶▶ 
-button in the Jupyter notebook tab menu.
+button in the toolbar.
 
 3. Write the code that loads external R packages near the top of the Jupyter 
 notebook.
@@ -336,9 +333,10 @@ notebook.
 It is essential to preview data files before you try to read them into R to see
 whether or not there are column names, what the delimiters are, and if there are 
 lines you need to skip. In Jupyter, you preview data files stored as plain text 
-files (e.g., comma- and tab-separated files) in their plain text format by 
-right-clicking on the file's name in the Jupyter file explorer and selecting 
-**Open with** and then selecting **Editor**. Suppose you do not specify to open 
+files (e.g., comma- and tab-separated files) in their plain text format (Figure \@ref(fig:open-data-w-editor-2)) by 
+right-clicking on the file's name in the Jupyter file explorer, selecting 
+**Open with**, and then selecting **Editor** (Figure \@ref(fig:open-data-w-editor-1)). 
+Suppose you do not specify to open 
 the data file with an editor. In that case, Jupyter will render a nice table 
 for you, and you will not be able to see the column delimiters, and therefore 
 you will not know which function to use, nor which arguments to use and values 
@@ -357,31 +355,31 @@ image_read("img/open_data_w_editor_02.png") |>
 ## Exporting to a different file format 
 
 In Jupyter, viewing, editing and running R code is done in the Jupyter notebook 
-(file extension `.ipynb`) file format. This file format is not easy to open and 
+file format with file extension `.ipynb`. This file format is not easy to open and 
 view outside of Jupyter. Thus, to share your analysis with people who do not 
 commonly use Jupyter, it is recommended that you export your executed analysis 
 as a more common file type, such as an `.html` file, or a `.pdf`. We recommend 
 exporting the Jupyter notebook after executing the analysis so that you can 
-also share the outputs of your code.
+also share the outputs of your code. Note, however, that your audience will not be
+able to *run* your analysis using a `.html` or `.pdf` file. If you want your audience
+to be able to reproduce the analysis, you must provide them with the `.ipynb` Jupyter notebook file.
 
 ### Exporting to HTML
-The `.html` file format will result in a shareable file that anyone can open 
-using a web browser (*e.g.,* Firefox, Safari, Chrome, Edge, *etc.*). It will 
-result in a document that is visually similar to what the Jupyter notebook 
+Exporting to `.html` will result in a shareable file that anyone can open 
+using a web browser (e.g., Firefox, Safari, Chrome, or Edge). The `.html`
+output will produce a document that is visually similar to what the Jupyter notebook 
 looked like inside Jupyter. One point of caution here is that if there are 
 images in your Jupyter notebook, you will need to share the image files and the 
 `.html` file to see them.
 
 ### Exporting to PDF
-The `.pdf` file format will result in a shareable file that anyone can open 
+Exporting to `.pdf` will result in a shareable file that anyone can open 
 using many programs, including Adobe Acrobat, Preview, web browsers and many 
 more. The benefit of exporting to PDF is that it is a standalone document, 
-even if the Jupyter notebook included references to image files. The 
-conventional route for exporting Jupyter notebooks to `.pdf` files depends on 
-a powerful tool called LaTeX. The default settings will result in a document 
+even if the Jupyter notebook included references to image files. 
+Unfortunately, the default settings will result in a document 
 that visually looks quite different from what the Jupyter notebook looked 
-like inside Jupyter regarding font and page margins. The formatting can be 
-customized, however, this requires some learning of the LaTeX markup language. 
+like. The font, page margins, and other details will appear different in the `.pdf` output. 
 
 ## Creating a new Jupyter notebook
 
@@ -390,7 +388,7 @@ own project instead of viewing, running or editing a notebook that was started
 by someone else. To do this, navigate to the **Launcher** tab, and click on 
 the R icon under the **Notebook** heading. If no **Launcher** tab is visible, 
 you can get a new one via clicking the **+** button at the top of the Jupyter 
-file explorer. 
+file explorer (Figure \@ref(fig:launcher)). 
 
 ```{r launcher, echo = FALSE, fig.cap = "Clicking on the R icon under the Notebook heading will create a new Jupyter notebook with an R kernel.", fig.retina = 2, out.width="100%"}
 image_read("img/launcher-annotated.png") |> 
@@ -413,13 +411,10 @@ files using lower case characters and separating words by a dash (`-`) or an
 underscore (`_`).
 
 ## Additional resources
-- The [JupyterLab Documentation](https://jupyterlab.readthedocs.io/en/latest/)
-
-Teaching the markdown formatting 
-language is beyond the scope of this book. However, If you are keen to learn 
-more, a good place to start is this cheatsheet by Commonmark: 
-[https://commonmark.org/help/](https://commonmark.org/help/), 
-as well as their tutorial: 
-[https://commonmark.org/help/tutorial/](https://commonmark.org/help/tutorial/).
-
-
+- The [JupyterLab Documentation](https://jupyterlab.readthedocs.io/en/latest/) is a good
+next place to look for more information about working in Jupyter notebooks. This documentation
+goes into significantly more detail about all of the topics we covered in this chapter, and
+covers more advanced topics as well.
+- If you are keen to learn about the Markdown language for rich text formatting, two good places to 
+start are [this Markdown cheatsheet](https://commonmark.org/help/)
+and [Markdown tutorial](https://commonmark.org/help/tutorial/), both provided by CommonMark.
