fixed learning objective spacing

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -25,18 +25,14 @@ in a standard data science project.
 
 By the end of the chapter, readers will be able to:
 
-- Describe what version control is 
-and why data analysis projects can benefit from it
+- Describe what version control is and why data analysis projects can benefit from it
 - Create a remote version control repository on GitHub
-- use Jupyter's Git version control tools for project versioning and 
-collaboration, specifically to:
-  
+- use Jupyter's Git version control tools for project versioning and collaboration, specifically to:
   - clone a remote version control repository to your local computer
   - commit changes to a local version control repository
   - push local changes to a remote version control repository
   - pull changes from a remote version control repository to your local version control repository
   - resolve merge conflicts
-
 - Give collaborators access to a remote GitHub repository
 - Communicate with collaborators using GitHub issues
 - Use best practices when collaborating on a project with others
