moved quote to beginning; cleaned up additional resources

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -7,6 +7,12 @@ library(knitr)
 knitr::opts_chunk$set(message = FALSE, echo = FALSE, warning = FALSE)
 ```
 
+> *You mostly collaborate with yourself, 
+> and me-from-two-months-ago never responds to email.*
+> 
+> --Mark T. Holder
+
+
 ## Overview
 
 This chapter will introduce the concept of using version control systems 
@@ -95,10 +101,6 @@ you should still use version control.
 It helps you keep track of what you've done, when you did it, 
 and what you're planning to do next!
  
-> *You mostly collaborate with yourself, 
-> and me-from-two-months-ago never responds to email.*
-> 
-> --Mark T. Holder
 
 To version control a project, you generally need two things: 
 a *version control system* and a *repository hosting service*. 
@@ -855,26 +857,8 @@ image_read("img/version_control/issue_06.png") %>%
 Now that you've picked up the basics of version control with Git and GitHub, 
 you can expand your knowledge through the resources listed below:
 
-### Best practices and workflows {-}
-- [Good enough practices in scientific computing](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510#sec014) [-@wilson2014best]  by Greg Wilson, Jennifer Bryan, Karen Cranston, Justin Kitzes, Lex Nederbragt & Tracy K. Teal advises and elaborates further on useful workflows and good enough practices to version control data analysis projects.
-    
-### Technical references {-}
-Below we link to additional tutorials 
-and guides for three common repository hosting services:
+- GitHub's [guides website](https://guides.github.com/) and [YouTube channel](https://www.youtube.com/githubguides),
+and [Happy Git](https://happygitwithr.com/) are great resources to take the next steps in learning about Git and GitHub.
+- [Good enough practices in scientific computing](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005510#sec014) [-@wilson2014best] provides more advice on useful workflows and "good enough" practices in data analysis projects.
+- In addition to [GitHub](https://github.com), there are other popular Git repository hosting services such as [GitLab](https://gitlab.com) and  [BitBucket](https://bitbucket.org). Comparing all of these options is beyond the scope of this book, and until you become a more advanced user you are perfectly fine to just stick with GitHub. Just be aware that you have options!
 
-- GitHub's [guides website](https://guides.github.com/)
-- GitHub's [YouTube channel](https://www.youtube.com/githubguides)
-- BitBucket's [tutorials](https://www.atlassian.com/git/tutorials/what-is-version-control)
-
-### List of common version control systems and repository hosting services {-}
-Below we list and link out to the most commonly used version control systems 
-and repository hosting services:
-
-- **Version control systems:**
-    - [Git](https://git-scm.com) 
-    - [Mercurial](https://mercurial-scm.org)
-    - [Subversion](https://subversion.apache.org)
-- **Repository hosting services:**
-    - [GitHub](https://github.com)
-    - [GitLab](https://gitlab.com)
-    - [BitBucket](https://bitbucket.org)
