polishing version control ovrview

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -22,10 +22,10 @@ and to distribute the finished project to its intended audience.
 This chapter will also introduce how to use 
 the two most common version control tools: Git for local version control, 
 and GitHub for remote version control. 
-There are many user interfaces for using Git, 
-here we will focus on how to use the Jupyter Git interface. 
-We will focus on the most common version control operations used day-to-day 
-in a standard data science project. 
+We will focus on the most common version control operations 
+used day-to-day in a standard data science project. 
+There are many user interfaces for Git; in this chapter 
+we will cover the Jupyter Git interface. 
 
 ## Chapter learning objectives
 
@@ -45,7 +45,7 @@ By the end of the chapter, readers will be able to:
 
 ## What is version control, and why should I use it?
 
-Version control is system which records changes to a document, 
+Version control is the process of keeping a record of changes to a document, 
 or set of documents, throughout the history of their development. 
 Most version control systems have features that allow users to easily
 view and retrieve past versions of the documents. 
@@ -61,11 +61,9 @@ made to the analysis, projects tend to become messy.
 This mess can have serious, negative repercussions on an analysis project, 
 which can include interesting results files that your code cannot reproduce,
 temporary files with snippets of ideas that become forgotten about 
-and are not easy to find, 
-mind-boggling filenames that make it unclear 
-which is the current working version of the file 
-(e.g., `document_final_draft_final.txt`, `golden_master_final.txt`, 
-`to_hand_in_final.txt`, etc), and more. 
+and are not easy to find, mind-boggling filenames that make it unclear which is
+the current working version of the file (e.g., `document_final_draft_final.txt`, 
+`to_hand_in_final_v2.txt`, etc.), and more. 
 
 Additionally, the iterative nature of data analysis projects 
 means that most of the time, the final version of the analysis that is
