polishing learning objectives

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -33,11 +33,11 @@ By the end of the chapter, readers will be able to:
 
 - Describe what version control is and why data analysis projects can benefit from it
 - Create a remote version control repository on GitHub
-- use Jupyter's Git version control tools for project versioning and collaboration, specifically to:
-  - clone a remote version control repository to your local computer
+- use Jupyter's Git version control tools for project versioning and collaboration: 
+  - clone a remote version control repository to a local computer
   - commit changes to a local version control repository
   - push local changes to a remote version control repository
-  - pull changes from a remote version control repository to your local version control repository
+  - pull changes from a remote version control repository to a local version control repository
   - resolve merge conflicts
 - Give collaborators access to a remote GitHub repository
 - Communicate with collaborators using GitHub issues
